...
					title: title,
                    leftItem: fromList ? .init(
                        content: .back(title: nil),
                        handler: { sink.send(.finish) }
                    ) : nil,
					rightItem: .init(
						content: .text("Reset"),
						isEnabled: value != 0,
						handler: { sink.send(.reset) }
					)
				)
			)
		}
...
