...
						selectDemo: { sink.send(.demo($0)) },
						isUpdatingDemos: state.isUpdatingDemos
					),
					alert: state.alert
				).asAnyScreen(),
				barContent: .init(
					title: "Workflow Demo",
					rightItem: .init(
						content: .text("Update"),
						isEnabled: !state.isUpdatingDemos,
						handler: { sink.send(.updateDemos) }
					)
				)
...
